<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
 android:fitsSystemWindows="true"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StockActivity">    
<android.support.v4.widget.DrawerLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/prod_home">
                
    <include layout="@layout/tool_bar"/>
    <ScrollView
     android:id="@+id/scrollView"
     android:layout_width="260dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="?android:attr/actionBarSize">
    <LinearLayout 
	        android:id="@+id/content"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:gravity="center_vertical"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	        
         <ImageView
        android:layout_height="wrap_content"
				 android:layout_width="wrap_content"
				 android:layout_weight="1.3"
				 android:gravity="left"
				 android:src="@drawable/ordering" />
         <TextView
        android:layout_height="wrap_content"
			 android:layout_width="wrap_content"
			 android:gravity="center_vertical"
			 android:textStyle="bold"
			 android:text="Add Products"
			 android:textSize="20dp" />
         
         <android.support.design.widget.TextInputLayout
						          android:id="@+id/tilname"
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:padding="2dp">
         <AutoCompleteTextView
					 android:id="@+id/et_add_product_name"
					 android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:hint="@string/product_name"
					 android:inputType="text"
					 android:maxLines="1"
					 android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
						          android:id="@+id/tildesc"
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:padding="2dp">
         <AutoCompleteTextView
					 android:id="@+id/et_add_product_desc"
					 android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:hint="@string/product_descr"
					 android:inputType="text"
					 android:maxLines="1"
					 android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
						          android:id="@+id/tilcost"
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:padding="2dp">
         <AutoCompleteTextView
					 android:id="@+id/et_add_product_cost"
					 android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:hint="@string/product_cost"
					 android:inputType="text"
					 android:maxLines="1"
					 android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
         
          <com.bontsi.ndiraphutcha.home.util.NonScrollListView
        android:id="@+id/source_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        /> 
         
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Button android:id="@+id/btn_add_product" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:text="@string/add_text" android:layout_weight="1" android:layout_marginRight="4dp"
                android:textColor="#fff"  android:theme="@style/AppTheme.ButtonBorderless" />
        
		        <Button android:id="@+id/btn_clear_product" android:layout_width="match_parent"
		                android:layout_height="wrap_content" android:text="@string/clear_text" android:layout_weight="1" android:layout_marginLeft="4dp"
		 android:textColor="#fff" android:theme="@style/AppTheme.Button"/>
		</LinearLayout>
	         <ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginTop="40dp" android:id="@+id/progress_login"/>
	        
	        </LinearLayout>
	        </ScrollView>
 
<include
            android:id="@+id/prod_rec"
            layout="@layout/recycleview"/>
</android.support.v4.widget.DrawerLayout>
</RelativeLayout>
