<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
 android:fitsSystemWindows="true"
android:layout_width="match_parent"
android:layout_height="match_parent">
<android.support.v4.widget.DrawerLayout 
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/stock_home"
              >
              <include layout="@layout/tool_bar"/>
	    <LinearLayout 
	        android:id="@+id/content"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:gravity="center_vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        >
	        
    <Spinner android:id="@+id/et_product_name" android:layout_width="match_parent"
              android:layout_height="wrap_content" />
    <TextView android:id="@+id/et_remaining_stock" android:layout_width="match_parent"
              android:layout_height="wrap_content" />
    <TextView android:id="@+id/et_used_stock" android:layout_width="match_parent"
              android:layout_height="wrap_content" />
    <EditText android:id="@+id/et_new_stock" 
        android:layout_width="match_parent"
        android:inputType="number"
        android:hint="@string/quantity"
              android:layout_height="wrap_content" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Button android:id="@+id/btn_add_stock" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:text="@string/add_text" android:layout_weight="1" android:layout_marginRight="4dp"
                android:textColor="#fff"  android:theme="@style/AppTheme.ButtonBorderless"/>
        <Button android:id="@+id/btn_clear_stock" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:text="@string/clear_text" android:layout_weight="1" android:layout_marginLeft="4dp"
                android:textColor="#fff"  android:theme="@style/AppTheme.Button"/>
    </LinearLayout>

    <ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginTop="40dp" android:id="@+id/progress_login"/>


	    </LinearLayout>
	    <include
            android:id="@+id/stock_rec"
            layout="@layout/recycleview"/>
	    
</android.support.v4.widget.DrawerLayout>
</RelativeLayout>
